--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">神舟国旅游客登记系统</string>
     <string name="title_home">主页</string>
     <string name="title_dashboard">工具箱</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_fragment">您好！\n今天也要辛苦您了！\n\n今天是%tF\n当前时间为%tT\n\n请务必核对时间，点击下面的按钮，来开始接下来的工作吧！</string>
+    <string name="title_activity_guide">请选择导游信息</string>
+    <string name="select_guide">选择导游信息</string>
 </resources>
