--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="sex">性别：</string>
     <string name="birthday">出生日期：</string>
     <string name="none">暂无</string>
-
-
+    <string name="query_all">全部</string>
+    <string name="query_by_date">按日期</string>
+    <string name="query_by_guide">按导游</string>
 </resources>
